# DiscordWebhookSender

./: Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: Dockerfile  send_webhook.py  test_send_webhook.py
